<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:orientation="vertical"

    android:weightSum="20">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="71dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="25dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Please enter the Table code  Sent to your  mobile number"
                android:textColor="@color/white"
                android:textSize="@dimen/buttonsize_normal" />


        </LinearLayout>


        <EditText
            android:id="@+id/txtOtp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="100dp"
            android:background="@color/white"
            android:digits="0123456789"
            android:elevation="8dp"
            android:gravity="center"
            android:hint="Confirmation Code"
            android:inputType="textEmailAddress"
            android:maxLength="8"
            android:paddingLeft="15dp"
            android:textColor="@color/cardview_dark_background"
            android:textColorHint="@color/background_1"
            android:textSize="@dimen/buttonsize_normal"
            android:typeface="normal"
            android:windowSoftInputMode="stateHidden" />
    </FrameLayout>

    <TableLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/colorPrimary"
        android:divider="@drawable/keyboard_divider"
        android:elevation="8dp"
        android:orientation="vertical"
        android:showDividers="beginning|middle|end"
        android:weightSum="4">

        <TableRow
            style="@style/keyboard_row"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="8dp">

            <TextView
                android:id="@+id/t9_key_1"
                style="@style/keyboard_number_button"
                android:elevation="15dp"
                android:text="@string/number_one"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/t9_key_2"
                style="@style/keyboard_number_button"
                android:text="@string/number_two"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/t9_key_3"
                style="@style/keyboard_number_button"
                android:text="@string/number_three"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            style="@style/keyboard_row"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="8dp">

            <TextView
                android:id="@+id/t9_key_4"
                style="@style/keyboard_number_button"
                android:text="@string/number_four"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/t9_key_5"
                style="@style/keyboard_number_button"
                android:text="@string/number_five"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/t9_key_6"
                style="@style/keyboard_number_button"
                android:text="@string/number_six"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            style="@style/keyboard_row"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="8dp">

            <TextView
                android:id="@+id/t9_key_7"
                style="@style/keyboard_number_button"
                android:text="@string/number_seven"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/t9_key_8"
                style="@style/keyboard_number_button"
                android:text="@string/number_eight"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/t9_key_9"
                style="@style/keyboard_number_button"
                android:text="@string/number_nine"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            style="@style/keyboard_row"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="8dp">

            <TextView
                android:id="@+id/t9_key_clear"
                style="@style/keyboard_button"
                android:text="@string/btn_clear"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/t9_key_0"
                style="@style/keyboard_number_button"
                android:text="@string/number_zero"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/t9_key_backspace"
                style="@style/keyboard_button"
                android:text="@string/btn_backspace"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/psu_resend_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="REQUEST CODE"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/background_1"
            custom:pb_colorNormal="@color/white"
            custom:pb_colorPressed="@color/colorAccent"
            custom:pb_colorProgress="@color/colorPrimaryDark" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/validationBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="NEXT"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/background_1"
            custom:pb_colorNormal="@color/white"
            custom:pb_colorPressed="@color/colorAccent"
            custom:pb_colorProgress="@color/colorPrimaryDark" />
    </LinearLayout>
</LinearLayout>
